Forwardport: translate the description at the right point.

BUG: 114882

svn path=/trunk/KDE/kdeedu/libkdeedu/kdeeduui/kdeeduglossary.cpp; revision=473233